app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector: 
    app: myapp
  ports:
    - port: 80
      targetPort: 80
